# log4cpp

./: .gitignore  CMakeLists.txt  README.md
src/: logger.cpp  logger.hpp
